--- a/task(2).html
+++ b/task(2).html
@@ -2,7 +2,11 @@
     <head>
     </head>
     <body>
-        <center><h1>Favorite Politicians</h1></center>
+        <a href="./task(1).html">Task 1</a><br>
+        <a href="./task(2).html">Task 2</a><br>
+        <a href="./task(3).html">Task 3</a><br>
+        <a href="./task(4).html">Task 4</a><br>
+        <center><h1>Task 2 - Favorite Politicians</h1></center>
         <details>
             <summary>NARENDRA MODI</summary>
         
