--- a/task(3).html
+++ b/task(3).html
@@ -1,7 +1,11 @@
 <html>
     <head></head>
     <body>
-        <center><h2>Favorite Books</h2></center>
+        <a href="./task(1).html">Task 1</a><br>
+        <a href="./task(2).html">Task 2</a><br>
+        <a href="./task(3).html">Task 3</a><br>
+        <a href="./task(4).html">Task 4</a><br>
+        <center><h2>Task 3 - Favorite Books</h2></center>
 
         <details>
             <summary>The Alchemist by Paulo Coelho</summary>
