--- a/task(1).html
+++ b/task(1).html
@@ -3,8 +3,12 @@
        
 </head>
 <body>
+  <a href="./task(1).html">Task 1</a><br>
+  <a href="./task(2).html">Task 2</a><br>
+  <a href="./task(3).html">Task 3</a><br>
+  <a href="./task(4).html">Task 4</a><br>
   
-  <center><h1>Favorite Persons</h1></center>
+  <center><h1>Task 1 - Favorite Persons</h1></center>
 <details>
          <summary>PRABHAS</summary>
       <P>
