--- a/task(4).html
+++ b/task(4).html
@@ -7,7 +7,7 @@
         </title>
     
     <body>
-        <a href="./task(1).html">Task 1</a><br>
+        <a href="./">Task 1</a><br>
         <a href="./task(2).html">Task 2</a><br>
         <a href="./task(3).html">Task 3</a><br>
         <a href="./task(4).html">Task 4</a><br>
